--- a/index.html
+++ b/index.html
@@ -1,40 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Intro component with sign up form</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <main>
-    <section class="container texto">
-      <h1 class="titulo">Learn to code by watching others</h1>
-      <p class="sub-titulo"> See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable. </p>
-    </section>
-    <section class="container formulario">
-      <p class="call"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
-    <form>
-      <label for="firstName"></label>
-      <input type="text" id="firstName" class="input-fields field" placeholder="First Name" required>
-      <label for="lastName"></label>
-      <input type="text" id="lastName" class="input-fields field" placeholder="Last Name" required>
-      <label for="email"></label>
-      <input type="email" id="email" class="input-fields field" placeholder="Email Address" required>
-      <label for="password"></label>
-      <input type="password" id="password" class="input-fields field" placeholder="Password" required>
-      <button class="botao field">Claim your free trial</button>
-      <p class="form-text">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
-    </form>
-    </section>
-  </main>
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/GuiSilveira">Guilherme Silveira</a>.
-    </p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Intro component with sign up form</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="container texto">
+        <h1 class="titulo">Learn to code by watching others</h1>
+        <p class="sub-titulo">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </section>
+      <section class="container formulario">
+        <p class="call">
+          <strong>Try it free 7 days</strong> then $20/mo. thereafter
+        </p>
+        <form>
+          <input
+            type="text"
+            id="firstName"
+            class="input-fields field"
+            placeholder="First Name"
+            required
+          />
+          <input
+            type="text"
+            id="lastName"
+            class="input-fields field"
+            placeholder="Last Name"
+            required
+          />
+          <input
+            type="email"
+            id="email"
+            class="input-fields field"
+            placeholder="Email Address"
+            required
+          />
+          <input
+            type="password"
+            id="password"
+            class="input-fields field"
+            placeholder="Password"
+            required
+          />
+          <button class="botao field">Claim your free trial</button>
+          <p class="form-text">
+            By clicking the button, you are agreeing to our
+            <a href="#">Terms and Services</a>
+          </p>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/GuiSilveira">Guilherme Silveira</a>.
+      </p>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
