--- a/index.html
+++ b/index.html
@@ -27,35 +27,44 @@
         <p class="call">
           <strong>Try it free 7 days</strong> then $20/mo. thereafter
         </p>
-        <form>
-          <input
-            type="text"
-            id="firstName"
-            class="input-fields field"
-            placeholder="First Name"
-            required
-          />
-          <input
-            type="text"
-            id="lastName"
-            class="input-fields field"
-            placeholder="Last Name"
-            required
-          />
-          <input
-            type="email"
-            id="email"
-            class="input-fields field"
-            placeholder="Email Address"
-            required
-          />
-          <input
-            type="password"
-            id="password"
-            class="input-fields field"
-            placeholder="Password"
-            required
-          />
+        <form novalidate>
+          <div class="form-control">
+            <input
+              type="text"
+              id="firstName"
+              class="input-fields field"
+              placeholder="First Name"
+            />
+            <small class="error-msg">First Name cannot be empty</small>
+          </div>
+          <div class="form-control">
+            <input
+              type="text"
+              id="lastName"
+              class="input-fields field"
+              placeholder="Last Name"
+            />
+            <small class="error-msg">Last Name cannot be empty</small>
+          </div>
+          <div class="form-control">
+            <input
+              type="email"
+              id="email"
+              class="input-fields field"
+              placeholder="Email Address"
+            />
+            <small class="error-msg">Email cannot be empty</small>
+          </div>
+          <div class="form-control">
+            <input
+              type="password"
+              id="password"
+              class="input-fields field"
+              placeholder="Password"
+            />
+            <small class="error-msg">Password cannot be empty</small>
+          </div>
+
           <button class="botao field">Claim your free trial</button>
           <p class="form-text">
             By clicking the button, you are agreeing to our
